# k8s-agent-api

./: README.md  okteto.yml
api/: Cargo.toml
api/graphql/auth/: add_token.gql  fetch_auth_token.gql  get_user_by_email.gql  register_user.gql  schema.graphql
api/src/: api.rs  auth.rs  config.rs  error.rs  main.rs  schema.rs
api/src/operations/: mod.rs
api/src/operations/auth/: add_token.rs  fetch_auth_token.rs  get_user_by_email.rs  mod.rs  register_user.rs
docker-compose/: docker-compose.yaml
hasura/: config.yaml
hasura/metadata/databases/: databases.yaml
hasura/metadata/databases/main/functions/: functions.yaml  public_generate_token_value.yaml  public_register.yaml
hasura/metadata/databases/main/tables/: auth_access_token.yaml  auth_access_token_has_roles.yaml  auth_account.yaml  auth_account_has_roles.yaml  auth_actor.yaml  auth_role.yaml  public_cluster.yaml  public_cluster_belongs_to_organization.yaml  public_cluster_registered_with_token.yaml  public_organization.yaml  public_organization_registration_token.yaml  public_user.yaml  public_user_belongs_to_organization.yaml  tables.yaml
hasura/migrations/main/1653309891709_initial_schema/: down.sql  up.sql
hasura/migrations/main/1655926002927_basic-auth-schema/: down.sql  up.sql
